k8s/ingress/ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /api/(orders)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 8000

          - path: /api/(users)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-service
                port:
                  number: 8001

          - path: /api/(payments)(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-service
                port:
                  number: 8002
